--- a/test.yaml
+++ b/test.yaml
@@ -25,8 +25,10 @@ steps:
     configMode: 'manual'
     cliProjectKey: 'nhl'
     cliSources: '.'
-    extraProperties: |
-      sonar.branch.name=
+- powershell: |
+    $params = "$env:SONARQUBE_SCANNER_PARAMS" -replace '"sonar.branch.name":"[\w,/,-]*"\,?'
+    Write-Host "##vso[task.setvariable variable=SONARQUBE_SCANNER_PARAMS]$params"
+
 - task: SonarQubeAnalyze@4
 - task: SonarQubePublish@4
   inputs:
