--- a/iac/azureagent/image/Dockerfile
+++ b/iac/azureagent/image/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 # To make it easier for build and release pipelines to run apt-get,
 # configure apt to not require confirmation (assume the -y argument by default)
@@ -19,6 +19,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     runc \
     php-cli \
     mysql-client \
+    default-jdk \
   && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root
