--- a/front-end/azure-fe-prod.yml
+++ b/front-end/azure-fe-prod.yml
@@ -37,6 +37,7 @@ steps:
     echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "$(acr-user):$(acr-pass)" | base64 -w0`\"}}}" >/root/.docker/config.json
     export DOCKERCONFIG=/root/.docker
     buildctl build --frontend=dockerfile.v0 --local context=front-end --local dockerfile=front-end --output type=image,name=$(acr-host)/nhl_fe_prod:$VERSION_TAG,push=true
+  displayName: Build and push image
 
 - task: PublishPipelineArtifact@1
   inputs:
