--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -17,7 +17,9 @@ variables:
 steps:
 
 #- script: VERSION_TAG=`git tag --sort=-creatordate` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
-- script: VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
+- script: |
+    VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
+    echo "$(VERSION_TAG)"
   displayName: Define VERSION_TAG variable
 
 - script: |
@@ -52,10 +54,7 @@ steps:
 
 - script: |
     mkdir /root/.docker
-    echo "one"
-    echo -n '$(acr-user):$(acr-pass)' | base64 -w0
-    echo "two"
-    echo -n "$acr-user:$acr-pass" | base64 -w0
+    echo "$VERSION_TAG"
     echo "{\"auths\":{\"$(acr-host)\":{\"auth\":\"`echo -n "$(acr-user):$(acr-pass)" | base64 -w0`\"}}}" >/root/.docker/config.json
     export DOCKERCONFIG=/root/.docker
     buildctl build --frontend=dockerfile.v0 --local context=front-end --local dockerfile=front-end --output type=image,name=$(acr-host)/nhl_fe_dev:$VERSION_TAG,push=true
