--- a/iac/sonar/docker-compose.yaml
+++ b/iac/sonar/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   sonarqube:
-    image: sonarqube:community
+    image: sonarqube:9.1.0-community
     depends_on:
       - db
     environment:
