--- a/front-end/azure-fe-dev.yml
+++ b/front-end/azure-fe-dev.yml
@@ -19,7 +19,7 @@ steps:
 #- script: VERSION_TAG=`git tag --sort=-creatordate` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
 - script: |
     VERSION_TAG=`git describe --tags` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
-    echo "$(VERSION_TAG)"
+    echo "$VERSION_TAG"
   displayName: Define VERSION_TAG variable
 
 - script: |
