--- a/back-end/azure-be-prod.yml
+++ b/back-end/azure-be-prod.yml
@@ -14,6 +14,9 @@ variables:
 - name: testpath
   value: back-end
 
+workspace:
+  clean: all
+
 steps:
 
 #- script: VERSION_TAG=`git tag --sort=-creatordate` && echo "##vso[task.setvariable variable=VERSION_TAG]$VERSION_TAG"
