--- a/helm/dev/templates/ingress.yml
+++ b/helm/dev/templates/ingress.yml
@@ -27,3 +27,10 @@ spec:
             name: {{ .Values.be.label }}
             port:
               number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: grafana
+            port:
+              number: 3000
