--- a/iac/release-prod-v5.json
+++ b/iac/release-prod-v5.json
@@ -10,7 +10,7 @@
   "lastRelease": null,
   "variables": {},
   "variableGroups": [
-    "89"
+    "93"
   ],
   "environments": [
     {
@@ -84,7 +84,7 @@
             "artifactsDownloadInput": {
               "downloadInputs": []
             },
-            "queueId": "491",
+            "queueId": "500",
             "demands": [],
             "enableAccessToken": false,
             "timeoutInMinutes": 0,
@@ -130,7 +130,7 @@
               "overrideInputs": {},
               "condition": "succeeded()",
               "inputs": {
-                "ConnectedServiceName": "5720d0bc-06dd-41bc-963a-42f78e0dd340",
+                "ConnectedServiceName": "51cdb02a-f834-4397-a7fc-e1b7a7aeaafc",
                 "KeyVaultName": "keyvault-531b25k8",
                 "SecretsFilter": "*",
                 "RunAsPreJob": "false"
@@ -155,7 +155,7 @@
                 "azureResourceGroup": "",
                 "kubernetesCluster": "",
                 "useClusterAdmin": "false",
-                "kubernetesServiceEndpoint": "e8468e75-bd09-4968-894f-c412db7adf39",
+                "kubernetesServiceEndpoint": "4064b02c-b3ea-40f4-9d3d-f841bac1e5a1",
                 "namespace": "default",
                 "azureSubscriptionEndpointForACR": "",
                 "azureResourceGroupForACR": "",
@@ -249,7 +249,7 @@
       "retentionPolicy": {
         "daysToKeep": 30,
         "releasesToKeep": 3,
-        "retainBuild": true
+        "retainBuild": false
       },
       "processParameters": {},
       "properties": {
@@ -278,7 +278,7 @@
   ],
   "artifacts": [
     {
-      "sourceId": "4faeb3a8-d02a-485c-8cf5-9585bd292962:210",
+      "sourceId": "410a9221-0b86-4467-ac5a-729fd31d63ad:214",
       "type": "Build",
       "alias": "_be_prod",
       "definitionReference": {
@@ -303,7 +303,7 @@
           "name": "Latest"
         },
         "definition": {
-          "id": "210",
+          "id": "214",
           "name": "be_prod"
         },
         "definitions": {
@@ -315,7 +315,7 @@
           "name": "False"
         },
         "project": {
-          "id": "4faeb3a8-d02a-485c-8cf5-9585bd292962",
+          "id": "410a9221-0b86-4467-ac5a-729fd31d63ad",
           "name": "nhl"
         },
         "repository": {
@@ -326,7 +326,7 @@
       "isRetained": false
     },
     {
-      "sourceId": "4faeb3a8-d02a-485c-8cf5-9585bd292962:211",
+      "sourceId": "410a9221-0b86-4467-ac5a-729fd31d63ad:215",
       "type": "Build",
       "alias": "_fe_prod",
       "definitionReference": {
@@ -351,7 +351,7 @@
           "name": "Latest"
         },
         "definition": {
-          "id": "211",
+          "id": "215",
           "name": "fe_prod"
         },
         "definitions": {
@@ -363,7 +363,7 @@
           "name": "False"
         },
         "project": {
-          "id": "4faeb3a8-d02a-485c-8cf5-9585bd292962",
+          "id": "410a9221-0b86-4467-ac5a-729fd31d63ad",
           "name": "nhl"
         },
         "repository": {
@@ -374,7 +374,7 @@
       "isRetained": false
     },
     {
-      "sourceId": "4faeb3a8-d02a-485c-8cf5-9585bd292962:209",
+      "sourceId": "410a9221-0b86-4467-ac5a-729fd31d63ad:216",
       "type": "Build",
       "alias": "_helm",
       "definitionReference": {
@@ -399,7 +399,7 @@
           "name": "Latest"
         },
         "definition": {
-          "id": "209",
+          "id": "216",
           "name": "helm"
         },
         "definitions": {
@@ -411,7 +411,7 @@
           "name": "False"
         },
         "project": {
-          "id": "4faeb3a8-d02a-485c-8cf5-9585bd292962",
+          "id": "410a9221-0b86-4467-ac5a-729fd31d63ad",
           "name": "nhl"
         },
         "repository": {
@@ -443,7 +443,7 @@
           "name": ""
         },
         "connection": {
-          "id": "da42c765-1462-44b2-a542-595b5dcd850f",
+          "id": "40bbdf13-cda5-4ea4-b693-1bb39ef75817",
           "name": "qutianer_pat"
         },
         "defaultVersionSpecific": {
